# TinySesam

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.de.md  CODE_OF_CONDUCT.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.de.md  README.md  SECURITY.de.md  SECURITY.md  TODO.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml
backlog/: ADR-1-pypi-vertagt.md  ADR-2-kein-selbst-update.md  ADR-3-in-app-statt-proxy.md  ADR-4-keine-self-hosted-runner.md  M-1-api-stabil-1-0.md  README.md  T-1-e2e-gegen-echten-idp.md  T-2-freien-port-nicht-selbst-suchen.md  T-3-forward-auth-header-feinsteuerung.md  T-4-verifikation-ohne-magic-endpoint.md  T-5-abbild-signatur-pruefen.md
deploy/fail2ban/: tinysesam-filter.conf  tinysesam-jail.conf
deploy/forward-auth/: Caddyfile  docker-compose.yml  nginx.conf  traefik.yml
docs/: flows.html  index.html  theme.css
examples/: demo.py  flows.py  showcase.py
i18n/: CODE_OF_CONDUCT.de.md  CONTRIBUTING.de.md  README.de.md  SECURITY.de.md
scripts/: check.sh  ci-status.sh  ci_status.py
tests/: run_all.py  test_account.py  test_admin.py  test_adminmount.py  test_apikeys.py  test_authz_hardening.py  test_browser.py  test_chain.py  test_cookies.py  test_core.py  test_csp.py  test_csrf.py  test_flows_page.py  test_forward_auth.py  test_gateway.py  test_group_roles.py  test_hardening.py  test_hardening2.py  test_i18n.py  test_identifier.py  test_ldap.py  test_magic.py  test_matrix.py  test_methods.py  test_pin.py  test_pin_stepup.py  test_presets.py  test_ratelimit.py  test_recovery_reset.py  test_register.py  test_repo.py  test_resource.py  test_saml.py  test_sessions_logout.py  test_site.py  test_stepup.py  test_theme_errors.py  test_updater.py  test_views_remember.py
tests/_kit/: MANIFEST.sha256  hygiene.py  hygiene_policy.json
tinysesam/: __init__.py  __main__.py  admin.py  config.py  gateway.py  ldap_.py  mailer.py  manager.py  messages.py  oidc.py  passwords.py  router.py  saml_.py  security.py  store.py  templates.py  theme.py  totp.py  updater.py  webauthn_.py
tools/: build_flows.py
web/: build.py  demo.py  flows.py  site.py  ui.py
