[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinysesam"
version = "0.3.0"
description = "Kleines, wiederverwendbares Multi-Methoden-Auth für FastAPI (Passwort, Passkey/WebAuthn, OIDC, TOTP)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "pyotp>=2.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23"]        # sonst stdlib-scrypt-Fallback
qr = ["qrcode[pil]>=7"]             # TOTP-Enrollment-QR
oidc = ["httpx>=0.27", "authlib>=1.3"]
passkey = ["webauthn>=2.0"]
all = ["argon2-cffi>=23", "qrcode[pil]>=7", "httpx>=0.27", "authlib>=1.3", "webauthn>=2.0"]

[project.scripts]
tinysesam = "tinysesam.__main__:main"

[tool.setuptools.packages.find]
include = ["tinysesam*"]
