[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tinysesam"
version = "0.14.0"
description = "Kleines, wiederverwendbares Multi-Methoden-Auth für FastAPI (Passwort, PIN, Passkey/WebAuthn, OIDC, SAML, LDAP/AD, TOTP, Magic-Link; Faktor-Ketten, Step-up, Recovery-Codes, Forward-Auth)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ollornog" }]
keywords = ["fastapi", "authentication", "auth", "oidc", "webauthn", "passkey", "totp", "2fa",
            "magic-link", "forward-auth", "sso", "session"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
    "Private :: Do Not Upload",   # Schutz gegen versehentlichen PyPI-Upload (Installation via GitHub)
]
dependencies = [
    "fastapi>=0.110",
    "pyotp>=2.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
argon2 = ["argon2-cffi>=23"]        # sonst stdlib-scrypt-Fallback
qr = ["qrcode[pil]>=7"]             # TOTP-Enrollment-QR
oidc = ["httpx>=0.27", "authlib>=1.3"]
passkey = ["webauthn>=2.0"]
ldap = ["ldap3>=2.9"]
redis = ["redis>=5"]
saml = ["python3-saml>=1.15"]       # braucht System-libxmlsec1
all = ["argon2-cffi>=23", "qrcode[pil]>=7", "httpx>=0.27", "authlib>=1.3", "webauthn>=2.0",
       "ldap3>=2.9", "redis>=5", "python3-saml>=1.15"]

[project.urls]
Homepage = "https://github.com/Ollornog/TinySesam"
Repository = "https://github.com/Ollornog/TinySesam"
Issues = "https://github.com/Ollornog/TinySesam/issues"

[project.scripts]
tinysesam = "tinysesam.__main__:main"

[tool.setuptools.packages.find]
include = ["tinysesam*"]

[tool.setuptools.package-data]
tinysesam = ["py.typed"]
